# plogic

./: AUTHORS  Makefile.am  configure.ac
data/: Makefile.am  plogic.pc.in
libplogic/: Makefile.am  Makefile.in  namespace-info.vala.in  plogic-0.2.pc  plogic-and.vala  plogic-base-operator-gate.vala  plogic-block-definition.vala  plogic-block.vala  plogic-input.vala  plogic-object.vala  plogic-operator-gate.vala  plogic-operator.vala  plogic-or.vala  plogic-output.vala  plogic-result.vala  plogic-value.vala  plogic.pc.in
m4/: valac.m4
src/: Makefile.am  namespace-info.vala.in  plogic-and.vala  plogic-base-operator-gate.vala  plogic-base-operator.vala  plogic-block-definition.vala  plogic-block.vala  plogic-connection.vala  plogic-gand.vala  plogic-gbase-operator-gate.vala  plogic-gbase-operator.vala  plogic-gblock.vala  plogic-gconnection.vala  plogic-gobject.vala  plogic-gor.vala  plogic-gvalue.vala  plogic-input.vala  plogic-object.vala  plogic-operator-gate.vala  plogic-operator.vala  plogic-or.vala  plogic-output.vala  plogic-result.vala  plogic-value.vala  plogic-variable.vala  plogic.deps.in
test/: Makefile.am  case-and.vala  case-block.vala  case-or.vala  case.vala  test-config.vala.in  test.vala
vapi/: Makefile.am
